syntax = "proto3";

import "common/model/model.proto";

option java_multiple_files = true;
option java_package = "com.voteva.interview.grpc.model.v1";

message GInterviewQuestion {
    GUuid questionUid = 1;
    string questionName = 2;
    string questionText = 3;
    string questionAnswer = 4;
    string category = 5;
}