syntax = "proto3";

import "common/model/model.proto";
import "auth/v1/model/model.proto";
import "interview/v1/model/model.proto";

option java_multiple_files = true;
option java_package = "com.voteva.interview.grpc.model.v1";


message GGetCategoriesRequest {
    GAuthentication authentication = 1;
}

message GGetAllQuestionsRequest {
    GAuthentication authentication = 1;
}

message GGetQuestionsByCategoryRequest {
    GAuthentication authentication = 1;
}

message GGetQuestionRequest {
    GAuthentication authentication = 1;
}

message GAddQuestionRequest {
    GAuthentication authentication = 1;
}

message GRemoveQuestionRequest {
    GAuthentication authentication = 1;
}
