syntax = "proto3";

import "common/model/model.proto";
import "interview/v1/model/model.proto";

option java_multiple_files = true;
option java_package = "com.voteva.interview.grpc.model.v1";


message GGetCategoriesResponse {

}

message GGetAllQuestionsResponse {

}

message GGetQuestionsByCategoryResponse {

}

message GGetQuestionResponse {

}

message GAddQuestionResponse {

}
