syntax = "proto3";

import "common/model/model.proto";
import "interview/v1/model/request.proto";
import "interview/v1/model/response.proto";

option java_multiple_files = true;
option java_package = "com.voteva.interview.grpc.service.v1";


service InterviewServiceV1 {

    rpc getCategories (GGetCategoriesRequest) returns (GGetCategoriesResponse);

    rpc getAllQuestions (GGetAllQuestionsRequest) returns (GGetAllQuestionsResponse);

    rpc getQuestionsByCategory (GGetQuestionsByCategoryRequest) returns (GGetQuestionsByCategoryResponse);

    rpc getQuestion (GGetQuestionRequest) returns (GGetQuestionResponse);

    rpc addQuestion (GAddQuestionRequest) returns (GAddQuestionResponse);

    rpc removeQuestion (GRemoveQuestionRequest) returns (Empty);

}